--- a/q/274225.html
+++ b/q/274225.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>104</td><td>R</td><td>240718T151236Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274247#274247">Dominic </a></td></tr>
-<tr d-ix="1"><td>330</td><td>Elisp</td><td>240718T150721Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274246#274246">Samuel J</a></td></tr>
-<tr d-ix="2"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
+<tr d-ix="0"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
+<tr d-ix="1"><td>104</td><td>R</td><td>240718T151236Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274247#274247">Dominic </a></td></tr>
+<tr d-ix="2"><td>330</td><td>Elisp</td><td>240718T150721Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274246#274246">Samuel J</a></td></tr>
 <tr d-ix="3"><td>096</td><td>Python 3.8 prerelease</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
 <tr d-ix="4"><td>041</td><td>Raku</td><td>240718T132936Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274243#274243">Ven</a></td></tr>
 <tr d-ix="5"><td>136</td><td>R</td><td>240718T061307Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274232#274232">pajonk</a></td></tr>
@@ -40,7 +40,43 @@
 <tr d-ix="11"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
 <tr d-ix="12"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>124</s> <s>108</s> 104 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 99 bytes</h1>
+<p>Naive method trying all possible permutations.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>f=(a,s=M=f,m,...p)=&gt;m&gt;M||a.map((v,i)=&gt;f(a.filter(_=&gt;i--),q=~~s+v,q*q&lt;m?m:q*q,...p,v))+a?o:(M=m,o=p)
+</code></pre>
+<p><a href="https://tio.run/##bYxNCoMwEIX3PUWWkzoJ9JdWGj2BJyilBGtKijHRSFbi1dMgXRU38@D73puPDNLXg3Yj6@yriVEJkOhFJRQa5Jw7KgpTVNMkuZEOIKBORIHkSrdjM8BTFJoxir2YZ58F7Lf9zZQmT7nsMVCaydLmUAmDVjgaa9t52za8tW9QcN89KN38MyR7JAckRySnFc9OSFhyv95a45LGa/y6PE2XnZOOXw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>Commented</h3>
+<pre class="lang-javascript prettyprint-override"><code>f = (             // f is a recursive function taking:
+  a,              //   a[] = input array
+  s =             //   s = current sum (initially NaN'ish)
+  M = f,          //   M = minimum of maximums (initially NaN'ish)
+  m,              //   m = maximum of squared cumulative sums
+                  //       (initially undefined)
+  ...p            //   p[] = permutation
+) =&gt;              //
+m &gt; M ||          // abort if m is greater than M
+a.map((v, i) =&gt;   // otherwise, for each value v at index i in a[]:
+  f(              //   do a recursive call:
+    a.filter(_ =&gt; //     pass a[] ...
+      i--         //       ... without the i-th element
+    ),            //     end of filter()
+    q = ~~s + v,  //     define q as s + v
+    q * q &lt; m ?   //     if q² is less than m:
+      m           //       leave m unchanged
+    :             //     else:
+      q * q,      //       set m to q²
+    ...p,         //     append to p[] ...
+    v             //     ... the new element v
+  )               //   end of recursive call
+) + a             // end of map()
+?                 // if we had m &gt; M or a[] is not empty:
+  o               //   just return o[]
+:                 // else:
+  (M = m, o = p)  //   update M to m and o[] to p[]
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>124</s> <s>108</s> 104 bytes</h1>
 <p><em>Edit: -13 bytes thanks to Giuseppe.<br />
 Edit2: -4 bytes thanks to pajonk</em></p>
 <pre class="lang-r prettyprint-override"><code>\(x,n=sum(x|1),m=combn(rep(1:n,n),n))x[m[,order(apply(m,2,\(v)max(cumsum(x[v])^2)/all(table(v)&lt;2)))[1]]]
@@ -54,7 +90,7 @@ Edit2: -4 bytes thanks to pajonk</em></p>
 <li>Get the minimum, and select the elements of the input using the corresponding indices.</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1>Elisp, <s>341</s> 330 Bytes</h1>
+<div id="pu2" class="pu"><h1>Elisp, <s>341</s> 330 Bytes</h1>
 <p>Edit: learned the sort function</p>
 <pre><code>(defun x (bag)(if (null bag)'(())(mapcan #'(lambda (e)(mapcar #'(lambda (p) (cons e p))(x(cl-remove e bag :count 1))))bag)))(defun z (a)(car (car (sort(cl-loop for e in (x a) collect(let ((i (cons e (apply 'max(cl-loop for o = (reverse e) then (cdr o) while o collect(abs (apply '+ o)))))))i))'(lambda (j k)(&lt; (cdr j) (cdr k))))))
 </code></pre>
@@ -79,41 +115,6 @@ Edit2: -4 bytes thanks to pajonk</em></p>
      '(lambda (j k)
         (&lt; (cdr j) (cdr k))))
     )))
-</code></pre>
-</div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 99 bytes</h1>
-<p>Naive method trying all possible permutations.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>f=(a,s=M=f,m,...p)=&gt;m&gt;M||a.map((v,i)=&gt;f(a.filter(_=&gt;i--),q=~~s+v,q*q&lt;m?m:q*q,...p,v))+a?o:(M=m,o=p)
-</code></pre>
-<p><a href="https://tio.run/##bYxNCoMwEIX3PUWWkzoJ9JdWGj2BJyilBGtKijHRSFbi1dMgXRU38@D73puPDNLXg3Yj6@yriVEJkOhFJRQa5Jw7KgpTVNMkuZEOIKBORIHkSrdjM8BTFJoxir2YZ58F7Lf9zZQmT7nsMVCaydLmUAmDVjgaa9t52za8tW9QcN89KN38MyR7JAckRySnFc9OSFhyv95a45LGa/y6PE2XnZOOXw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<h3>Commented</h3>
-<pre class="lang-javascript prettyprint-override"><code>f = (             // f is a recursive function taking:
-  a,              //   a[] = input array
-  s =             //   s = current sum (initially NaN'ish)
-  M = f,          //   M = minimum of maximums (initially NaN'ish)
-  m,              //   m = maximum of cumulative sums (initially undefined)
-  ...p            //   p[] = permutation
-) =&gt;              //
-m &gt; M ||          // abort if m is greater than M
-a.map((v, i) =&gt;   // otherwise, for each value v at index i in a[]:
-  f(              //   do a recursive call:
-    a.filter(_ =&gt; //     pass a[] ...
-      i--         //       ... without the i-th element
-    ),            //     end of filter()
-    q = ~~s + v,  //     define q as s + v
-    q * q &lt; m ?   //     if q² is less than m:
-      m           //       leave m unchanged
-    :             //     else:
-      q * q,      //       set m to q²
-    ...p,         //     append to p[] ...
-    v             //     ... the new element v
-  )               //   end of recursive call
-) + a             // end of map()
-?                 // if we had m &gt; M or a[] is not empty:
-  o               //   just return o[]
-:                 // else:
-  (M = m, o = p)  //   update M to m and o[] to p[]
 </code></pre>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 96 bytes</h1>
