--- a/q/68355.html
+++ b/q/68355.html
@@ -43,6 +43,7 @@
 from numpy import*
 </code></pre>
 <p><a href="https://tio.run/##HcpBDoMgEEDRfU/BboBSLWnjQuIZPIBxgVaiDTCEYKJpenZq3b38/LCnGf0j59dkiKFaDKzmKGwjpRR2dGdRewMFcKr5UJb2Jpnamu5Z9fwIauvqeugb5Pqk/nNQcUpr9ASgeOPiqdOBjnMUx2F7xoo4BavHiRrAz/5FEAbaAy0Iya6AcDERHfGrCztZXMCYeA5x8YkaKish74zlHw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>Uses slice replacement: <code>x[::b]=o*a; x[::a]=o*b</code></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 25 bytes</h1>
 <pre><code>ġ/ʀṘ*fDÞǔ‛.oİ‟Ẋ'?ġ+↔;h⁽ɾ¢
