--- a/q/68355.html
+++ b/q/68355.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>161</td><td>Python 3</td><td>240719T005631Z</td><td><a href="https://codegolf.stackexchange.com/questions/68355/visualize-the-greatest-common-divisor/274253#274253">aeh5040</a></td></tr>
+<tr d-ix="0"><td>160</td><td>Python 3</td><td>240719T005631Z</td><td><a href="https://codegolf.stackexchange.com/questions/68355/visualize-the-greatest-common-divisor/274253#274253">aeh5040</a></td></tr>
 <tr d-ix="1"><td>025</td><td>Vyxal</td><td>240717T202931Z</td><td><a href="https://codegolf.stackexchange.com/questions/68355/visualize-the-greatest-common-divisor/274222#274222">emanresu</a></td></tr>
 <tr d-ix="2"><td>072</td><td>MATL</td><td>160104T015858Z</td><td><a href="https://codegolf.stackexchange.com/questions/68355/visualize-the-greatest-common-divisor/68539#68539">Luis Men</a></td></tr>
 <tr d-ix="3"><td>191</td><td>Python 2</td><td>160102T112104Z</td><td><a href="https://codegolf.stackexchange.com/questions/68355/visualize-the-greatest-common-divisor/68410#68410">Sherlock</a></td></tr>
@@ -37,13 +37,14 @@
 <tr d-ix="8"><td>052</td><td>Jolf</td><td>160101T215259Z</td><td><a href="https://codegolf.stackexchange.com/questions/68355/visualize-the-greatest-common-divisor/68366#68366">Conor O&</a></td></tr>
 <tr d-ix="9"><td>5090</td><td>𝔼𝕊𝕄𝕚𝕟</td><td>160101T200751Z</td><td><a href="https://codegolf.stackexchange.com/questions/68355/visualize-the-greatest-common-divisor/68359#68359">Mama Fun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 161 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 160 bytes</h1>
 
-<pre class="lang-python prettyprint-override"><code>def f(a,b):*o,l=111,lcm(a,b);y='.'*(a*b//l-1);x=[46]*a*b;x[::b]=o*a;x[::a]=o*b;return ''.join(map(chr,x[:l])).replace(f'o{y}o',f'O{y}O',1)+'o'
+<pre class="lang-python prettyprint-override"><code>def f(a,b):*o,l=111,lcm(a,b);y='.'*(a*b//l-1);x=[46]*a*b;x[::b]=o*a;x[::a]=o*b;return''.join(map(chr,x[:l])).replace(f'o{y}o',f'O{y}O',1)+'o'
 from numpy import*
 </code></pre>
-<p><a href="https://tio.run/##HcpBDoMgEEDRfU/BboBSLWnjQuIZPIBxgVaiDTCEYKJpenZq3b38/LCnGf0j59dkiKFaDKzmKGwjpRR2dGdRewMFcKr5UJb2Jpnamu5Z9fwIauvqeugb5Pqk/nNQcUpr9ASgeOPiqdOBjnMUx2F7xoo4BavHiRrAz/5FEAbaAy0Iya6AcDERHfGrCztZXMCYeA5x8YkaKish74zlHw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##HcpBDoMgEEDRfU/hboBSLWnjQsMZPIBxgRaiDTCEaCJpenZq3b38/JDWGf0j55c2hSGKj7RhyK0UQnA7ubO0SUIJjCg2VpW9Cdrusn/WAztCu/dNMw4SmTqp/hzbqNcteoDyjYsnTgUyzZEfgx0oLaMOVk2aGMBP@iJwA92BDrigV0C4mIiu8JsLqVhcwLiyHOLiV2KIqLm4U5p/" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>Uses slice replacement: <code>x[::b]=o*a; x[::a]=o*b</code></p>
+<p>Uses <code>lcm</code> from <code>numpy</code></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 25 bytes</h1>
 <pre><code>ġ/ʀṘ*fDÞǔ‛.oİ‟Ẋ'?ġ+↔;h⁽ɾ¢
