--- a/q/44946.html
+++ b/q/44946.html
@@ -26,42 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>070</td><td>JavaScript Node.js</td><td>240718T065742Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274236#274236">l4m2</a></td></tr>
-<tr d-ix="1"><td>130</td><td>Python 3</td><td>240716T082401Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274193#274193">Jitse</a></td></tr>
-<tr d-ix="2"><td>217</td><td>Scala 3</td><td>240716T122025Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274196#274196">138 Aspe</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Scala 3</td><td>240716T122025Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274196#274196">138 Aspe</a></td></tr>
+<tr d-ix="1"><td>070</td><td>JavaScript Node.js</td><td>240718T065742Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274236#274236">l4m2</a></td></tr>
+<tr d-ix="2"><td>130</td><td>Python 3</td><td>240716T082401Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274193#274193">Jitse</a></td></tr>
 <tr d-ix="3"><td>229</td><td>Python3</td><td>240715T223722Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274186#274186">Ajax1234</a></td></tr>
 <tr d-ix="4"><td>154</td><td>Python 2</td><td>150126T063449Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/44952#44952">Sp3000</a></td></tr>
 <tr d-ix="5"><td>196</td><td>Haskell</td><td>150126T045305Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/44948#44948">MtnViewM</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 70 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>L=&gt;g=([c,...A],T,n=L)=&gt;T?1/c?Math.min(g(A,T),c+g(A,T-!--n,n||L)):1/0:0
-</code></pre>
-<p><a href="https://tio.run/##ZYyxDoIwEIZ338KtF6@l1biQFMJet26kA6lQIdgaIU68ezUVXciXu/zJ/90NzauZ7LN/zNSHaxs7GZUsnCS1RcZYZVCjlwpkoUuR2fLSzDd27z1xpEINaA8p0D2lHv2yKIBcZDzn0QY/hbFlY3CkIycgtUCO3xEGBcBuq6Tyo/DfNnjciOdV5H/Wrys8HcU3" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Output Infinity if no solution. Slower than brute force but reasonable for test cases</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 130 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>p,t,l=map(int,input().split())
-q=[(input(),0)]
-for s,n in q:q+=[(s[s.count('.'*l)&gt;=t&gt;exit(n):x]+'.'+s[x+1:],n+1)for x in range(p)]
-</code></pre>
-<p><a href="https://tio.run/##LYxBCsMgFET3nkJwEX@VT9OSjWAuElyEkrZC@mOiAXt6q9DZDLzhTfim90b3UoJOerWfOUhPSXsKZ5KAMay@NrDdTvIP9RUce24Hj5q4J76bXdU1ThEf20lJdthdVhhtGpdcbQKTnapQxSmr3jhNqod2kJt@zPRaZABXSj/wGx8YCmwRKFrwBw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>Full program, outputs via <a href="https://codegolf.meta.stackexchange.com/a/5330/87681">exit code</a></p>
-<hr />
-<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 89 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda p,t,l,q:min(bin(x).count('1')for x in range(q+1)if f'{x^q:0{p}b}'.count('0'*l)&gt;=t)
-</code></pre>
-<p><a href="https://tio.run/##NcpNCoMwEEDhq8wumXYoRhFE0JNIIWmbNhDzRwoR8eypmy7e5uOFLX@866qelmrlqp4SAmWyFMfVOK7OCt4e/usyZ4Kh9gkKGAdJuveLx6tAo0Gzvdzj2OzhUAf77w27WJynjDUkc4LmoqeWehq6oUWsPw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>Uses more lenient input restrictions: here, <code>q</code> is a bitmap representing the occupied parking spots, so <code>8382</code> represents <code>10000010111110</code>.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 217 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, <del>217</del> 200 bytes</h1>
 <p>A port of <a href="http://pastebin.com/ugv4zujB" rel="nofollow noreferrer">@Etaoin Shrdlu's Python code</a> in Scala.</p>
-<p>217 bytes, it can be golfed more.</p>
+<p>Saved 17 bytes thanks to @corvus_192</p>
 <hr />
-<p>Golfed version. <a href="https://ato.pxeger.com/run?1=fZC_TsMwEMb3PMUpHWoLx21aFQGpkToiAQtsCFWOScCp66SxW_5EfYW-AEsXWHiivg12G4YunG3Z33e_O9n-_DaCKz78eQgjXb7yWoePu3GZFpmwcMOlhuzNZvrJwKSqoAmCFVcgLtCVtuRv3dla6mfMLp0A9rW0eXS226GKzIgiC-c3K14DZwtqy2tpbOJlyiZ1zd9pLpVCM4yQIn2Mk7yskRxHfbAlzKIYN94oWoNTIz-ySOFG5sgJJUWGClKcKExFudQWTRnrdrp4nCKJ6dSV-wP7lyUFXifrhDNOK27FCzrUDsitVES5XErnvEJT346a5XzdPnATAPR6cJ8ZC4KbzDhduY-wSiOBTgnEBIYEwg51oxNi7On4CDonMDhAjqDUz5YbHHHxaA-O9iD14Vu6oC0-DNpbbbeH_Rc" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre class="lang-scala prettyprint-override"><code>(p,k,l,q)=&gt;{var a=q.toList;var b=Array.fill(k)((l,0));for(i&lt;-0 to k-1){for(j&lt;-0 to a.size-l){if(a.slice(j,j+l).count(_=='#')&lt;b(i)._1){b(i)=(a.slice(j,j+l).count(_=='#'),j)};};a=a.patch(b(i)._2,Nil,l)};b.map(_._1).sum}
+<p>Golfed version. <a href="https://ato.pxeger.com/run?1=fY_BUsIwEIbvfYqdciAZ00BhcBQIMxw9qAe9OQ6TxhRTQlqaFFHGV_AFvHDRZ_EVeBtTqAcubpLZ-f_9ssl-flvBNe_vw4cwMvkLL01IwkhzM6_4XA6L3LpUbW4LGz7ux3mSSeHgmisDcuOkebIwLQrYBsGaaxBDdGUc-Tt3rlRmjtnEC2BflUuji_0PKsiCaLLy_nbNS8RJghlakWlZ8leaKq3RAiOkSRdjPOqCy2ERxUtebBWbHCSnVr3JSENtZmyiUuQtrYREGcnONKYir4xD7VabMTxOkMJ0FuM6s_9IkuH3EWecFtyJZ3S81yM3ShPtKwn176FZ3cpWy_dmno8AoNOBe2kdCG6l9brwczttkEDnBGICfQJhi_rVCjGu6fgEuiTQO0KeoLTeDdc74eLBARwcQFpH3dIHbfB-0PxqtzvmXw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre class="lang-scala prettyprint-override"><code>(p,k,l,q)=&gt;{var(a,b)=(q,Array.fill(k)((l,0)));0 to k-1map{i=&gt;0 to a.size-l map{j=&gt;if(a.slice(j,j+l).count('#'==)&lt;b(i)._1)b(i)=(a.slice(j,j+l).count('#'==),j)};a=a.patch(b(i)._2,Nil,l)};b.map(_._1)sum}
 </code></pre>
 <p>Ungolfed version. <a href="https://ato.pxeger.com/run?1=jVJdT8IwFE183K84gQfaOAqDYJTAA4-GaST6aELq6KBL2ZatGI3hl_jCi_4of41dVz5MeLBrctdzzzm3ub2f32XEFe_vdl8bHbevfy6es5dERBp3XKYQb1qkixKTPMeHByxEDMOPNoprQR6GuE21j6mLoYuzIR51IdMltQDGVgu88gKzUJYVMmM6q34PCWXASVHwdxZLpciUEhL66FLqWUqcFSASoza62KRaKkyps3XJ5DRJbB2mRLrUK7QR4hIBPSoAGe9JpZKRIImPxJBCyqLMeJA5xmO0mi2KERSRlM2DUzksaO78PxOD04N26_2Nh55Yp5zraEXqkj0f91KZztbibd0LxdY8J_PqRqzcrD2X6HTwJIxRxEtRmnNunkCrlBwf7MpH4KPvo9Fk5ms2TEeMKjhLvvHRq8mGyVi1Hb93lh8MrGBgBaxaVQmzmJP1vW09ZG7W9jP3Cw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <pre class="lang-scala prettyprint-override"><code>object Main extends App {
@@ -87,6 +64,29 @@ for s,n in q:q+=[(s[s.count('.'*l)&gt;=t&gt;exit(n):x]+'.'+s[x+1:],n+1)for x in 
   println(calculate(15, 2, 5, &quot;.#.....#.#####.&quot;)) // 3
 }
 </code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 70 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>L=&gt;g=([c,...A],T,n=L)=&gt;T?1/c?Math.min(g(A,T),c+g(A,T-!--n,n||L)):1/0:0
+</code></pre>
+<p><a href="https://tio.run/##ZYyxDoIwEIZ338KtF6@l1biQFMJet26kA6lQIdgaIU68ezUVXciXu/zJ/90NzauZ7LN/zNSHaxs7GZUsnCS1RcZYZVCjlwpkoUuR2fLSzDd27z1xpEINaA8p0D2lHv2yKIBcZDzn0QY/hbFlY3CkIycgtUCO3xEGBcBuq6Tyo/DfNnjciOdV5H/Wrys8HcU3" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Output Infinity if no solution. Slower than brute force but reasonable for test cases</p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 130 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>p,t,l=map(int,input().split())
+q=[(input(),0)]
+for s,n in q:q+=[(s[s.count('.'*l)&gt;=t&gt;exit(n):x]+'.'+s[x+1:],n+1)for x in range(p)]
+</code></pre>
+<p><a href="https://tio.run/##LYxBCsMgFET3nkJwEX@VT9OSjWAuElyEkrZC@mOiAXt6q9DZDLzhTfim90b3UoJOerWfOUhPSXsKZ5KAMay@NrDdTvIP9RUce24Hj5q4J76bXdU1ThEf20lJdthdVhhtGpdcbQKTnapQxSmr3jhNqod2kJt@zPRaZABXSj/wGx8YCmwRKFrwBw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>Full program, outputs via <a href="https://codegolf.meta.stackexchange.com/a/5330/87681">exit code</a></p>
+<hr />
+<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 89 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda p,t,l,q:min(bin(x).count('1')for x in range(q+1)if f'{x^q:0{p}b}'.count('0'*l)&gt;=t)
+</code></pre>
+<p><a href="https://tio.run/##NcpNCoMwEEDhq8wumXYoRhFE0JNIIWmbNhDzRwoR8eypmy7e5uOFLX@866qelmrlqp4SAmWyFMfVOK7OCt4e/usyZ4Kh9gkKGAdJuveLx6tAo0Gzvdzj2OzhUAf77w27WJynjDUkc4LmoqeWehq6oUWsPw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>Uses more lenient input restrictions: here, <code>q</code> is a bitmap representing the occupied parking spots, so <code>8382</code> represents <code>10000010111110</code>.</p>
 </div>
 <div id="pu3" class="pu"><h1>Python3, 229 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>from itertools import*
